2008-11-12  Michael Wiegand <michael.wiegand@intevation.de>

	Applying patch provided by Stjepan Gros to improve 64-bit cleanliness.

	* openvasd/nasl_plugins.c, openvasd/ntp_11.c, openvasd/attack.c,
	openvasd/save_kb.c, openvasd/openvasd.c, openvasd/nes_plugins.c,
	openvasd/pluginload.c, openvasd/save_tests.c, openvasd/comm.c,
	openvasd/pluginscheduler.c: 32/64-bit cleanups, introduced glib.

2008-11-12  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Work on Change Request #17 (http://www.openvas.org/openvas-cr-17.html -
	"OTP: Make NVT signatures available to OpenVAS-Client").
	Certificate information sending functionality improved. Sends real 
	information, not dummystrings.

	ATTENTION: needs openvas-libnasl rev. 1702 to compile smoothly.

	* configure.in : Macros for gpgme public key support added.

	* include/config.h.in : undef _FILE_OFFSET_BITS for AC_SYS_LARGEFILE

	* configure : regenerated.

	* openvasd/otp_1_0.h : proto added.

	* openvasd/otp_1_0.c (otp_1_0_server_send_certificates) : nasl, glib 
	includes. Does send real information, not dummystrings.

	* openvasd/ntp_11.c : removed interpretation of a void return.

	* openvasd/oval_plugins.c : Includes ordered and missing ones added.

	* ChangeLog : shamefully changed typos with my own email adress.

2008-11-12  Michael Wiegand <michael.wiegand@intevation.de>

	* configure.in: Added AC_PREREQ directive to tell autoconf to generate
	a 2.50-style configure script.

	* configure: Regenerated.

2008-11-12  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/oval_plugins.c: (child_setup) Implemented privilege dropping
	before calling ovaldi. (ovaldi_launch) Improved parsing of RPM package
	list.

2008-11-10  Michael Wiegand <michael.wiegand@intevation.de>

	* configure.in: Include version requirements in glib error string as
	pointed out by Jon Bebeau.

	* configure: Regenerated.

2008-11-10  Michael Wiegand <michael.wiegand@intevation.de>
